[package]
name = "Anchor_Luna_Integration"
version = "0.10.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Simple CosmWasm contract for an escrow with arbiter and timeout"
repository = "https://github.com/CosmWasm/cosmwasm-examples"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]

cosmwasm-std = { version = "0.16.0" , features = ["staking"] }
cosmwasm-storage = { version = "0.16.0" }
cw-storage-plus = { version = "0.8.0" }
schemars = "0.8.3"
cw2 = "0.9.0"
thiserror = { version = "1.0.26" }
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
terra-cosmwasm = { version = "2.1.0" }
cw20 = "0.8.0"


[dev-dependencies]
cosmwasm-schema = "0.16.0"
